Final index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <p id="status">No alarm set.</p>
 
-        <audio id="alarmSound" src="{{ url_for('static', filename='alarm.mp3') }}" preload="auto"></audio>
+        <audio id="alarmSound" src="static/alarm.mp3" preload="auto"></audio>
     </div>
 
     <script>
